{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "f37e9f66-8bcb-4966-a41c-9f1c8e91595d",
            "actions": [
                {
                    "name": "HorizontalAxis",
                    "type": "Value",
                    "id": "5b7265a0-da79-4daa-95e6-f3b72e912c0a",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "VerticalAxis",
                    "type": "Value",
                    "id": "602647b7-9cba-4cf5-8e5e-7c07eb943272",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryAction",
                    "type": "Button",
                    "id": "0dc668d6-0961-4d53-8bb1-43289e32411e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "3da2c01f-0e5d-4c70-ac43-1b6f14a5ea5a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalAxis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "994847d4-80ff-4055-a0c5-9bba44c4b54b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "0fb55ef3-4253-490e-99a1-18d795297be9",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "88e3fd78-d39a-4d17-8d18-5b673a6aa25d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "f958313a-4dfe-4c9b-98a3-f831cf88203a",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "0768ba90-2f91-419c-9622-f61f74627697",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalAxis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "7b07e958-d2fa-4703-8c8a-eefccb054de1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "7a7c1d6d-d0b3-4439-8432-b58272f69abb",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "23fc9906-9b89-40fe-aecb-cc9dd780f158",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "4d0a2d33-e9a5-4cf2-a0e4-98e7affd8e0a",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "00694b49-eac8-4215-bfd3-dc809dde224c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}